# renderpilot

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
apps/desktop/src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  elevation.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs  query_game_cards.rs  validation.rs
crates/renderpilot-api/: Cargo.toml
crates/renderpilot-api/src/: catalog.rs  covers.rs  dlss_indicator.rs  error.rs  lib.rs  nvapi.rs  operations.rs  scan.rs  utils.rs
crates/renderpilot-api/src/catalog/: cards.rs  details.rs  mod.rs  settings.rs
crates/renderpilot-api/src/catalog/cards/: mod.rs  normalize.rs  output.rs  query.rs  sort.rs  tests.rs
crates/renderpilot-api/src/libraries/: mod.rs
crates/renderpilot-application/: Cargo.toml
crates/renderpilot-application/src/: candidates.rs  error.rs  fsr.rs  info.rs  lib.rs  operation_plan.rs
crates/renderpilot-application/src/candidates/: dto.rs  matcher.rs  mod.rs  tests.rs
crates/renderpilot-application/src/operation_plan/: assessment.rs  builder.rs  findings.rs  identity.rs  mod.rs  plan.rs  tests.rs
crates/renderpilot-application/src/persistence/: backup_id.rs  backup_record.rs  metadata_json.rs  mod.rs  operation_item_record.rs  operation_journal_entry.rs  operation_kind.rs  operation_record.rs  operation_status.rs  unix_timestamp_millis.rs
crates/renderpilot-application/src/ports/: component_detector.rs  game_source.rs  mod.rs
crates/renderpilot-application/src/ports/repositories/: artifact_repository.rs  backup_repository.rs  component_repository.rs  game_repository.rs  mod.rs  operation_repository.rs
crates/renderpilot-cli/: Cargo.toml
crates/renderpilot-cli/src/: args.rs  desktop.rs  error.rs  hash.rs  lib.rs  main.rs  test_env.rs
crates/renderpilot-cli/src/backup_manager/: apply.rs  create.rs  filesystem.rs  journal.rs  manifest.rs  mod.rs  plan_metadata.rs  rollback.rs  shared.rs  tests.rs
crates/renderpilot-cli/src/catalog/: auto_scan.rs  execute.rs  mod.rs  operations.rs  scan.rs  storage.rs  swap.rs
crates/renderpilot-cli/src/catalog/covers/: basename.rs  fs_ops.rs  http_client.rs  install.rs  mod.rs  paths.rs  policy.rs  protocol.rs  validation.rs
crates/renderpilot-cli/src/catalog/scan/: auto.rs  install_partitioner.rs  mod.rs  paths.rs  prune.rs  recovery.rs  scan_plan.rs
crates/renderpilot-cli/src/commands/: mod.rs  test_support.rs
crates/renderpilot-cli/src/commands/tests/: artifacts.rs  backup.rs  candidates.rs  general.rs  mod.rs  operations.rs  plan_swap.rs  scan.rs  scan_file_hash_cache.rs
crates/renderpilot-cli/src/desktop/: catalog.rs  covers.rs  dlss_indicator.rs  mod.rs  nvapi.rs  operations.rs  scan.rs  tests.rs  utils.rs
crates/renderpilot-cli/src/desktop/dlss/: mod.rs  preset_manifest.rs  settings_catalog.rs
crates/renderpilot-cli/src/desktop/libraries/: artifact_builder.rs  fsr_packages.rs  group.rs  http.rs  local_library.rs  manifest.rs  mod.rs  storage.rs  tests.rs  types.rs  validate.rs
crates/renderpilot-cli/src/desktop/nvapi/: dto.rs  ops.rs  registry.rs  (+1 more)
crates/renderpilot-cli/src/output/: json.rs  mod.rs  tests.rs  text.rs
crates/renderpilot-detection/: Cargo.toml
crates/renderpilot-detection/assets/: library_patterns.json
crates/renderpilot-detection/src/: error.rs  file_metadata.rs  glob.rs  lib.rs  normalize.rs  pattern.rs
crates/renderpilot-detection/src/filesystem_detector/: classification.rs  grouping.rs  mod.rs  paths.rs  scan.rs  tests.rs
crates/renderpilot-detection/src/pe_version/: binary.rs  image.rs  mod.rs  tests.rs  version_info.rs
crates/renderpilot-domain/: Cargo.toml
crates/renderpilot-domain/src/: game.rs  ids.rs  lib.rs  model.rs  path.rs  text.rs  version.rs
crates/renderpilot-domain/src/component/: hash.rs  mod.rs  tests.rs
crates/renderpilot-domain/src/fsr/: install_targets.rs  lineage.rs  mod.rs  naming.rs  representative.rs  tests.rs
crates/renderpilot-nvapi/: Cargo.toml
crates/renderpilot-nvapi/src/: api.rs  dlss.rs  error.rs  ffi.rs  lib.rs  setting.rs
crates/renderpilot-orchestration/: Cargo.toml
crates/renderpilot-orchestration/src/: context.rs  error.rs  fs_sync.rs  lib.rs  portable.rs  storage.rs  util.rs
crates/renderpilot-orchestration/src/catalog/: auto_scan.rs  cards.rs  execute.rs  mod.rs  operations.rs  output.rs  swap.rs
crates/renderpilot-orchestration/src/covers/: fs_ops.rs  http_client.rs  install.rs  mod.rs  paths.rs  policy.rs  protocol.rs  validation.rs
crates/renderpilot-orchestration/src/dlss/: indicator.rs  installed.rs  mod.rs  preset_manifest.rs  settings_catalog.rs
crates/renderpilot-orchestration/src/libraries/: artifact_builder.rs  compression.rs  fsr_packages.rs  http.rs  local_library.rs  manifest.rs  mod.rs  storage.rs  tests.rs  types.rs  validate.rs
crates/renderpilot-orchestration/src/nvapi/: dto.rs  mod.rs  ops.rs  registry.rs  resolve.rs
crates/renderpilot-platform-windows/: Cargo.toml
crates/renderpilot-platform-windows/src/: executable_detection.rs  fs_walk.rs  game_libraries.rs  lib.rs  manual_folder.rs  steam_appmanifest.rs
crates/renderpilot-platform-windows/src/dlss/: dll_search.rs  indicator.rs  mod.rs  version.rs
crates/renderpilot-platform-windows/src/game_libraries/: launchers.rs  mod.rs  paths.rs  registry.rs
crates/renderpilot-storage-sqlite/: Cargo.toml
crates/renderpilot-storage-sqlite/migrations/: 0001_initial.sql  0002_nvapi.sql
crates/renderpilot-storage-sqlite/src/: error.rs  lib.rs  mapping.rs  schema.rs  sqlite_clock.rs
crates/renderpilot-storage-sqlite/src/repositories/: artifacts.rs  backups.rs  catalog_select_sql.rs  columns.rs  component_backups.rs  components.rs  file_hash_cache.rs  game_covers.rs  game_ui_state.rs  games.rs  mod.rs  nvapi.rs  operations.rs  row_mapping.rs
crates/renderpilot-storage-sqlite/src/schema/: migration.rs  mod.rs  objects.rs  pragmas.rs  tests.rs  validation.rs
(+605 files in other folders)
