[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/renderpilot-domain",
    "crates/renderpilot-application",
    "crates/renderpilot-detection",
    "crates/renderpilot-storage-sqlite",
    "crates/renderpilot-platform-windows",
    "crates/renderpilot-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
