[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/renderpilot-domain",
    "crates/renderpilot-application",
    "crates/renderpilot-detection",
    "crates/renderpilot-storage-sqlite",
    "crates/renderpilot-platform-windows",
    "crates/renderpilot-nvapi",
    "crates/renderpilot-cli",
    "crates/renderpilot-orchestration",
    "crates/renderpilot-api",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.85"
license = "GPL-3.0-only"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
needless_pass_by_value = "warn"
redundant_clone = "warn"
unnecessary_to_owned = "warn"
