[package]
name = "renderpilot-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GUI presentation facade for RenderPilot — DTOs, serde_json::Value responses, and ApiError."

[lints]
workspace = true

[dependencies]

renderpilot-orchestration = { path = "../renderpilot-orchestration" }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"
