[package]
name = "renderpilot-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line entry point for RenderPilot."

[lints]
workspace = true

[dependencies]
renderpilot-orchestration = { path = "../renderpilot-orchestration" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"

[dev-dependencies]
hex = "0.4"
renderpilot-storage-sqlite = { path = "../renderpilot-storage-sqlite" }
sha2 = "0.11"
tempfile = "3"

[[bin]]
name = "renderpilot"
path = "src/main.rs"
