[package]
name = "renderpilot-detection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Detection pipeline boundary for RenderPilot."

[lints]
workspace = true

[dependencies]
hex = "0.4"
renderpilot-application = { path = "../renderpilot-application" }
renderpilot-domain = { path = "../renderpilot-domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"
