[package]
name = "renderpilot-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure domain types for RenderPilot."

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"

[dev-dependencies]
serde_json = "1"

[lib]
path = "src/lib.rs"
