[package]
name = "renderpilot-nvapi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "NVAPI FFI bindings for RenderPilot."

[lints.rust]
unsafe_code = "allow"

# Local lints opt this crate out of workspace inheritance, so the ownership
# lints from the workspace table are mirrored here.
[lints.clippy]
needless_pass_by_value = "warn"
redundant_clone = "warn"
unnecessary_to_owned = "warn"

[dependencies]
libloading = "0.8"
thiserror = "2"

[lib]
path = "src/lib.rs"
