[package]
name = "renderpilot-storage-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQLite storage adapter boundary for RenderPilot."

[lints]
workspace = true

[dependencies]
renderpilot-application = { path = "../renderpilot-application" }
renderpilot-domain = { path = "../renderpilot-domain" }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = "1"
serde_json = "1"

[dev-dependencies]
renderpilot-detection = { path = "../renderpilot-detection" }

[lib]
path = "src/lib.rs"
