[package]
name = "renderpilot-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tauri desktop shell for RenderPilot."
build = "build.rs"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
renderpilot-cli = { path = "../../../crates/renderpilot-cli" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"

[lib]
name = "renderpilot_desktop"
path = "src/lib.rs"
test = false

[[bin]]
name = "renderpilot-desktop"
path = "src/main.rs"
