[package]
name = "renderpilot-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tauri desktop shell for RenderPilot."
build = "build.rs"

[lints.rust]
# The workspace forbids unsafe, but this crate needs Win32 FFI for:
# - OpenProcessToken / GetTokenInformation (current_elevation)
# - ShellExecuteExW (self-relaunch elevated)
# All FFI is isolated in src/elevation.rs and cfg-gated to Windows.
unsafe_code = "allow"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
renderpilot-api = { path = "../../../crates/renderpilot-api" }
renderpilot-orchestration = { path = "../../../crates/renderpilot-orchestration" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[lib]
name = "renderpilot_desktop"
path = "src/lib.rs"
test = false

[[bin]]
name = "renderpilot-desktop"
path = "src/main.rs"
